fix scrollbar

--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -22,11 +22,15 @@ ul {
 }
 
 html {
-  overflow-x: hidden;
-  margin-right: calc(-1 * (100vw - 100%));
+  //overflow-x: hidden;
+  //margin-right: calc(-1 * (100vw - 100%));
+  margin-left: calc(100vw - 100%);
+  margin-right: 0;
   height: 100%;
   background-color: var(--background);
   color: var(--text);
+  width:100vw;
+  overflow-x:hidden;
 }
 
 body, {
@@ -56,6 +60,7 @@ body, {
   width: 100%;
   //height: 100%;
   min-width: 360px;
+
 }
 
 img {
@@ -151,7 +156,7 @@ textarea {
   }
   #aside.show + #app {
     position: absolute;
-    width: calc(100% - 150px);
+    width: calc(100vw - 150px);
     left: 150px;
   }
 }
